erDiagram
    USERS ||--o{ SHORT_URLS : creates
    USERS ||--o{ API_KEYS : owns
    USERS ||--o{ USER_SUBSCRIPTIONS : subscribes_to
    SHORT_URLS ||--o{ ANALYTICS : records
    SUBSCRIPTION_TYPES ||--o{ SUBSCRIPTION_FEATURES : has
    SUBSCRIPTION_TYPES ||--o{ SUBSCRIPTION_LIMITS : has
    FEATURES ||--o{ SUBSCRIPTION_FEATURES : included_in
    SUBSCRIPTION_TYPES ||--o{ USER_SUBSCRIPTIONS : type_of

    USERS {
        uuid id PK
        string email UK
        string password_hash
        string full_name
        boolean is_verified
        timestamp created_at
        timestamp updated_at
    }

    SHORT_URLS {
        uuid id PK
        string short_code UK
        string original_url
        uuid user_id FK
        string title
        string description
        boolean is_active
        timestamp created_at
        timestamp expires_at
        timestamp last_accessed_at
        int clicks
        boolean is_deleted
    }

    ANALYTICS {
        uuid id PK
        string short_url_code FK
        string ip_address
        string user_agent
        string referer
        string country
        string city
        string device_type
        string browser
        timestamp created_at
    }

    API_KEYS {
        uuid id PK
        uuid user_id FK
        string key UK
        string name
        boolean is_active
        int daily_usage
        int monthly_usage
        timestamp last_used_at
        timestamp created_at
        timestamp updated_at
    }

    SUBSCRIPTION_TYPES {
        uuid id PK
        string name UK
        string display_name
        string description
        decimal price_monthly
        decimal price_yearly
        int url_retention_days
        timestamp created_at
        timestamp updated_at
    }

    FEATURES {
        uuid id PK
        string name UK
        string description
        timestamp created_at
        timestamp updated_at
    }

    SUBSCRIPTION_FEATURES {
        uuid id PK
        uuid subscription_type_id FK
        uuid feature_id FK
        string value
        timestamp created_at
        timestamp updated_at
    }

    SUBSCRIPTION_LIMITS {
        uuid id PK
        uuid subscription_type_id FK
        string limit_type
        int limit_value
        timestamp created_at
        timestamp updated_at
    }

    USER_SUBSCRIPTIONS {
        uuid id PK
        uuid user_id FK
        uuid subscription_type_id FK
        string subscription_id
        string payment_id
        string status
        timestamp current_period_start
        timestamp current_period_end
        timestamp created_at
        timestamp updated_at
    }